<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
     android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="485dp"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FirsActivity" >
    
    <Button
        android:id="@+id/determinantes2x2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/determinantes2x2"
        android:textSize="15sp"
        android:textStyle="bold" 
        android:onClick="lanzar"/>

    <Button
        android:id="@+id/determinantes3x3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/determinantes2x2"
        android:layout_below="@+id/determinantes2x2"
        android:text="@string/determinantes3x3"
        android:textStyle="bold"
        android:textSize="15sp" 
        android:onClick="lanzar1"/>
    
    <Button
        android:id="@+id/determinantes4x4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/determinantes3x3"
        android:layout_below="@+id/determinantes3x3"
        android:text="@string/determinantes4x4"
        android:textStyle="bold" 
        android:textSize="15sp"
        android:onClick="lanzar2"/>
    
    <Button
        android:id="@+id/determinantes5x5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/determinantes4x4"
        android:layout_below="@+id/determinantes4x4"
        android:text="@string/determinantes5x5"
        android:textStyle="bold" 
        android:textSize="15sp"
        android:onClick="lanzar6"/>
    
    <Button
        android:id="@+id/sisec2inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/determinantes5x5"
        android:layout_below="@+id/determinantes5x5"
        android:onClick="lanzar3"
        android:text="@string/SELcon2incognitas"
        android:textSize="15sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/sisec3inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/sisec2inc"
        android:layout_below="@+id/sisec2inc"
        android:text="@string/SELcon3incognitas"
        android:textStyle="bold" 
        android:textSize="15sp"
        android:onClick="lanzar4"/>
    
     <Button
        android:id="@+id/sisec4inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/sisec3inc"
        android:layout_below="@+id/sisec3inc"
        android:text="@string/SELcon4incognitas"
        android:textStyle="bold" 
        android:textSize="15sp"
        android:onClick="lanzar7"/>
     
    <Button
        android:id="@+id/ecucuadra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/sisec4inc"
        android:layout_below="@+id/sisec4inc"
        android:text="@string/cuadra"
        android:textStyle="bold" 
        android:textSize="15sp"
        android:onClick="lanzar5"/>
    
    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/ecucuadra"
        android:layout_below="@+id/ecucuadra"
        android:text="@string/exit"
        android:textStyle="bold" 
        android:textSize="15sp"
        android:onClick="lanzar8"/>
    
    
 </RelativeLayout>
 </ScrollView>



